use sqlx runtime-tokio-rustls

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,7 @@ async-trait = { version = "0.1.68" }
 sqlx = { version = "0.6.3", default-features = false, features = [
     "macros",
     "postgres",
-    "runtime-tokio-native-tls",
+    "runtime-tokio-rustls",
     "time",
 ] }
 tokio = { version = "1.26.0", features = ["macros", "rt-multi-thread"] }
